@@ -31,10 +31,11 @@ Legend:
   - Ticket #2779, Support MicroDVD tags in MPL2 subtitles files. This is normally not
     supported but MPL2 files that use MicroDVD tags for formatting are quite common.
   - Support SRT files with missing millisecond part in the timecodes.
+! WebUI: Fix seeking
+! WebUI: Fix volume slider going out of bounds with IE in player.html
 ! Ticket #2423, Fix wrong rounding leading to small black bars when resizing the window.
   This was mostly visible when using the "auto-fit" zoom or when resizing manually.
 ! Ticket #2783, Fix crash when generating the chapter marks.
 ! Ticket #2805, AviSplitter: Fix a crash when closing the file while re-indexing.
 ! Ticket #2838, The window wasn't draggable anymore by clicking on the information panel.
 ! Ticket #2839, Post-resize shaders weren't working with VMR-9 (renderless).
-! WebUI: Fix seeking.
